Added the functionality to the SimpleXmppServer of preventing concurrent connections from the same user, to go along with the book